chat-window: Fix spacing issues in styling
- Also make the text input static to the bottom of the screen
- Further make the chat messages scrollable

--- a/src/app/component/chat-window/chat-window.component.scss
+++ b/src/app/component/chat-window/chat-window.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   height: 100vh;
   background-color: #121212; // Or the specific background color you want
   color: white;
@@ -81,6 +81,7 @@
     margin: 5px;
     width: max-content;
     align-self: flex-end;
+    min-width: 10%;
     max-width: 80%;
     padding: 4px 8px 16px 8px; /* Adjust padding to incorporate spacing for timestamp */
     word-wrap: break-word;
@@ -103,6 +104,7 @@
     margin: 5px;
     width: max-content;
     align-self: flex-start;
+    min-width: 10%;
     max-width: 80%;
     padding: 4px 8px 16px 8px; /* Adjust padding to incorporate spacing for timestamp */    
     word-wrap: break-word;
@@ -134,7 +136,18 @@
     display: flex;
     flex-direction: column;
     width: 80%;
+    flex-grow: 1;
+    overflow-y: auto;
   }
 
-
+  .chat-input-container-bottom {
+    display: flex;
+    align-items: center;
+    width: 80%;
+    padding: 10px; /* Add padding for spacing */
+    position: sticky; /* Stick to the bottom of the container */
+    bottom: 0; /* Stick to the bottom */
+    background-color: #121212; /* Match the container's background color */
+    z-index: 2;
+  }
 }
